<?xml version="1.0"?>
<package>
  <name>eposx_library</name>
  <version>0.0.4</version>
  <description>A catkin package that provides the EPOS Command Library</description>

  <maintainer email="okada@rm.is.tohoku.ac.jp">Yoshito Okada</maintainer>

  <license>TODO</license>

  <url type="website">https://www.maxonmotor.com/medias/sys_master/root/8828279488542/EPOS-Command-Library-En.pdf</url>
  <url type="repository">https://github.com/yoshito-n-students/eposx_hardware</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
